# cat_packaging

./: README.md
project_0/: README.md  nwb.py  utils.py
project_1/: README.md  pyproject.toml  test_script.py
project_1/src/lazynwb/: nwb.py  utils.py
project_2/: README.md
