[project]
name = "lazynwb"    # name of the importable package
requires-python = ">=3.9"
dependencies = [
    "npc-io",
    "h5py",
    "zarr",
    "remfile",
]
version = "0.1.0"

[build-system]
requires = [
    "setuptools>=61",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [
    "src",
]
